fix note value buttons, adjust margins and button spacing, adjust max/min width

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 /* General styles */
 .bass-tab-buddy-content {
     padding: 10px;
-    max-width: 632px;
+    max-width: 656px;
+    min-width: 430px;
     margin: 0 auto;
 }
 
@@ -39,7 +40,6 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    margin-bottom: 20px;
     width: 100%;
 }
 
@@ -105,8 +105,11 @@
 
 .bass-tab-buddy-controls {
     display: flex;
-    justify-content: space-between;
-    margin-top: 1em;
+    flex-wrap: wrap;
+    gap: 5px;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 5px;
 }
 
 .bass-tab-buddy-controls button {
@@ -140,9 +143,15 @@
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 5px;
 }
 
 .bass-tab-buddy-note-input .setting-item-control button {
     flex: 1;
-    min-width: 80px;
+}
+
+.noteValBtn {
+    max-width: 45px;
 }
